<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_childAddEditFragment"
            app:destination="@id/childAddEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_duties"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_rewards"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/childAddEditFragment"
        android:name="com.example.myapplication.ui.home.ChildAddEditFragment"
        android:label="@string/title_add_new_child"
        tools:layout="@layout/fragment_child_add_edit" />

    <fragment
        android:id="@+id/navigation_rewards"
        android:name="com.example.myapplication.ui.reward.RewardsFragment"
        android:label="@string/title_rewards"
        tools:layout="@layout/fragment_rewards">
        <action
            android:id="@+id/action_navigation_rewards_to_rewardAddEditFragment"
            app:destination="@id/rewardAddEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/rewardAddEditFragment"
        android:name="com.example.myapplication.ui.reward.RewardAddEditFragment"
        android:label="RewardAddEditFragment"
        tools:layout="@layout/fragment_reward_add_edit">
        <action
            android:id="@+id/action_rewardAddEditFragment_to_navigation_rewards"
            app:destination="@id/navigation_rewards"
            app:popUpTo="@id/navigation_rewards"
            app:popUpToInclusive="true" />

        <argument
            android:name="rewardId"
            android:defaultValue="0L"
            app:argType="long" />
    </fragment>

</navigation>