<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.myapplication.ui.home.ChildAddEditViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        tools:context=".ui.home.ChildAddEditFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_person_24_purple"
            app:startIconTint="@color/purple_700">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:textColorHint="@color/purple_700"
                android:text="@={viewModel.child.name}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldBirth"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birthday"
            android:textColorHint="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldName"
            app:startIconTint="@color/purple_700"
            app:startIconDrawable="@drawable/ic_baseline_calendar_month_24_purple">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_margin="@dimen/margin_small"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                android:onClick="@{() -> viewModel.showDatePicker()}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:text="@string/choose_avatar"
            android:textSize="@dimen/textSize_h5"
            android:textColor="@color/purple_700"
            android:layout_marginTop="@dimen/margin_big"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldBirth" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayoutAvatarList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:columnCount="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView"
            >

        </androidx.gridlayout.widget.GridLayout>

        <Button
            android:id="@+id/button2"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:onClick="@{() -> viewModel.saveAddChildOrEdit()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>